# lab07

./: CMakeCache.txt  CMakeLists.txt  Makefile  REPORT.md  cmake_install.cmake
c++/: CMakeLists.txt  Dockerfile  main.cpp
formatter_ex_lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
formatter_ex_lib/formatter/: Makefile
formatter_lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
hello_world_application/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
hello_world_application/formatter_ex/: Makefile  cmake_install.cmake
hello_world_application/formatter_ex/formatter/: Makefile
python/: Dockerfile  binary_set.py
solver_application/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
solver_application/formatter_ex/: Makefile  cmake_install.cmake
solver_application/formatter_ex/formatter/: Makefile  cmake_install.cmake
solver_application/solver_lib/: Makefile  cmake_install.cmake
solver_lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
